--- a/.github/workflows/my-first-workflow.yml
+++ b/.github/workflows/my-first-workflow.yml
@@ -28,7 +28,7 @@ jobs:
       run: npm ci 
 
     - name: Run tests
-      run: npm tests  
+      run: npm test
 
     - name: Print a message
       run: echo "Hello, world!"
